classDiagram
    class BaseAPI {
        <<abstract>>
        #initialized: boolean
        #config: Object
        +initialize()*
        +shutdown()*
        +executeOperation()*
    }
    
    class APIRegistry {
        -apis: Map
        -metrics: Map
        +register()
        +get()
        +unregister()
    }

    class ActiveHandler {
        -contextWindow: number
        +handleInteraction()
        +handleSearch()
        +handleAnalysis()
    }

    class PassiveHandler {
        -llmProvider: Object
        +handleChat()
        +handleQuery()
        +handleStore()
    }

    class SelfieHandler {
        -collectors: Object
        +collectMetrics()
        +trackError()
    }

    class HTTPServer {
        -app: Express
        -wsServer: WebSocket
        +setupRoutes()
        +setupMiddleware()
    }

    BaseAPI <|-- ActiveHandler
    BaseAPI <|-- PassiveHandler
    BaseAPI <|-- SelfieHandler
    BaseAPI <|-- HTTPServer
    
    ActiveHandler --> APIRegistry
    PassiveHandler --> APIRegistry
    SelfieHandler --> APIRegistry